--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>
             BOAZ
         </title>  <!-- dit zorgt dat de titel van de pagina verander -->
-        <ul>
-  <li><a href="algemene informatie.html">algemene informatie</a></li>
+        <ul><!--ul staat voor een lijst van verschillende dingen-->
+  <li><a href="algemene informatie.html">algemene informatie</a></li><!--il staat voor een serie aan instructies-->
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
   <li><a href="compressie.html"> compressie</a></il>
