--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -10,9 +10,8 @@
                 <li><a href="compressie.html"> compressie</a></il>
                 <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
               </ul>
-              <p>1. Kleuren Modellen: RGB en CMYK</p>
-              <p>Kleuren Modellen zijn methoden om kleuren te laten zien. De meest gebruikte modellen zijn RGB en CMYK.
-            </p>
+            <p>1. Kleuren Modellen: RGB en CMYK</p>
+            <p>Kleuren Modellen zijn methoden om kleuren te laten zien. De meest gebruikte modellen zijn RGB en CMYK. </p>
             <p>RGB-kleurenmodel</p>
             <p>Dit staat voor: rood, groen, blauw. Het wordt voornamelijk gebruikt voor schermen, zoals bij computers, tv's en smartphones. Het werkt door die kleuren te combineren om andere kleuren te maken. Elke kleur heeft een intensiteit tussen 0 en 255. Wanneer de drie kleuren op maximale intensiteit worden ingesteld, krijg je wit; als ze op nul staan, krijg je zwart.</p>
             <p>CMYK-kleurmodel</p>
