--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -22,5 +22,6 @@
 <p>Gegevens (Data): Dit zijn de letters en cijfers die zonder verweking bijna geen betkenis hebben.</p>
 <p>In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.</p>
 </div>
+<img src="images.png">
 </body>
 </html>
