--- a/bitmap- en vectorafbeeldingen.html
+++ b/bitmap- en vectorafbeeldingen.html
@@ -27,6 +27,6 @@
 <p>Lossless compressie formaten behouden alle originele gegevens zonder kwaliteitsverlies. Ze veranderen het geluid door de onnodige delen te verwijderen zonder geluidsgegevens te verwijderen.</p>
 <p>Lossy compressie:</p>
 <p>Formaten die lossy compressie gebruiken om de bestandsgrootte te verkleinen doen dit door middel van dingen die je niet hoort te verwijderen. Hier komen kleine bestandsgroottes uit, maar er gaat wel geluidskwaliteit weg.</p>
-
+<img src="download.jpeg">
 </body>
 </html>
