--- a/compressie.html
+++ b/compressie.html
@@ -24,5 +24,6 @@
 <p>Audiocompressie</p>
 <p>Lossless: FLAC is een lossless audioformaat die hoge kwaliteit heeft, maar de bestandsgroottes zijn groot.</p>
 <p>Lossy: MP3 is een lossy audioformaat dat veel wordt gebruikt  omdat het een kleine bestandsgrootte heeft, er is hier wel veel kwaliteitsverlies.</p>
+<img src="Lossy-vs-Lossless-432x550.png">
 </body>
 </html>
