--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -20,6 +20,7 @@
             <p>Een pixel is het kleinste stukje van een digitale afbeelding. Het is 1 klein punt op het scherm dat een specifieke kleur kan aangeven. het werkt met drie kleuren (RGB-model) die met verschillende intensiteiten verschillende kleuren worden</p>
             <p>3. Resolutie</p>
             <p>Resolutie is hoeveel pixels een beeld bevat uitgedrukt in breedte x hoogte in pixels. Hoe hoger de resolutie is, hoe meer pixels op het beeld, hoe scherper de afbeelding wordt. Bij een lage resolutie zijn de beelden blokkerig en onscherp.</p>
+            <img src="download.png">
         </body>
     </head>
 </html>
