--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -23,5 +23,8 @@
 <p>In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.</p>
 </div>
 <img src="images.png">
+<footer>
+  <p class="footer">boaz tuijn</p>
+</footer>
 </body>
 </html>
