--- a/bitmap- en vectorafbeeldingen.html
+++ b/bitmap- en vectorafbeeldingen.html
@@ -28,5 +28,8 @@
 <p>Lossy compressie:</p>
 <p>Formaten die lossy compressie gebruiken om de bestandsgrootte te verkleinen doen dit door middel van dingen die je niet hoort te verwijderen. Hier komen kleine bestandsgroottes uit, maar er gaat wel geluidskwaliteit weg.</p>
 <img src="download.jpeg">
+<footer>
+  <p class="footer">boaz tuijn</p>
+</footer>
 </body>
 </html>
