--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -21,6 +21,9 @@
             <p>3. Resolutie</p>
             <p>Resolutie is hoeveel pixels een beeld bevat uitgedrukt in breedte x hoogte in pixels. Hoe hoger de resolutie is, hoe meer pixels op het beeld, hoe scherper de afbeelding wordt. Bij een lage resolutie zijn de beelden blokkerig en onscherp.</p>
             <img src="download.png">
+            <footer>
+                <p class="footer">boaz tuijn</p>
+              </footer>
         </body>
     </head>
 </html>
